--- a/src/markdown/mas/analyses_beheerovereenkomsten.Rmd
+++ b/src/markdown/mas/analyses_beheerovereenkomsten.Rmd
@@ -188,11 +188,11 @@ gele_kwik_df1 %>%
 gele_kwik_df <- gele_kwik_df1 %>%
   mutate(jaar = factor(jaar),
          zomergranen_hfdtlt2 = rowSums(across(
-           c(graangewassen_hfdtlt, zomergranen_hfdtlt))),
+           c(andere_graangewassen_hfdtlt, zomergranen_hfdtlt))),
          zomergranen_hfdtlt_pre2 = rowSums(across(
-           c(graangewassen_hfdtlt_pre, zomergranen_hfdtlt_pre)))) %>%
-  select(-c(graangewassen_hfdtlt, zomergranen_hfdtlt,
-            graangewassen_hfdtlt_pre, zomergranen_hfdtlt_pre))
+           c(andere_graangewassen_hfdtlt_pre, zomergranen_hfdtlt_pre)))) %>%
+  select(-c(andere_graangewassen_hfdtlt, zomergranen_hfdtlt,
+            andere_graangewassen_hfdtlt_pre, zomergranen_hfdtlt_pre))
 
 strat_vars <- c("plotnaam", "regio", "periode_in_jaar", "jaar", "jaar.f")
 response_vars <- c("aantal")
@@ -2087,11 +2087,11 @@ create_data_list <- function(soorten, region, year = 2022) {
       distinct() %>%
       mutate(jaar = factor(jaar),
          zomergranen_hfdtlt2 = rowSums(across(
-           c(graangewassen_hfdtlt, zomergranen_hfdtlt))),
+           c(andere_graangewassen_hfdtlt, zomergranen_hfdtlt))),
          zomergranen_hfdtlt_pre2 = rowSums(across(
-           c(graangewassen_hfdtlt_pre, zomergranen_hfdtlt_pre)))) %>%
-      select(-c(graangewassen_hfdtlt, zomergranen_hfdtlt,
-                graangewassen_hfdtlt_pre, zomergranen_hfdtlt_pre))
+           c(andere_graangewassen_hfdtlt_pre, zomergranen_hfdtlt_pre)))) %>%
+      select(-c(andere_graangewassen_hfdtlt, zomergranen_hfdtlt,
+                andere_graangewassen_hfdtlt_pre, zomergranen_hfdtlt_pre))
     
     # Aggregate counts by plot and year
     mas_data_df_agg <- mas_data_df_full %>%
